main.tf
resource "aws_vpc" "myapp-vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    "Name" = "${var.env_prefix}-vpc"
  }
}

module "myapp-subnet" {
  source = "./modules/subnet"
  default_route_table_id = aws_vpc.myapp-vpc.default_route_table_id
  vpc_id = aws_vpc.myapp-vpc.id
  subnet_cidr_block = var.subnet_cidr_block
  avail_zone = var.avail_zone
  env_prefix = var.env_prefix
}

module "myapp-webserver" {
  source = "./modules/webserver"
  vpc_id = aws_vpc.myapp-vpc.id
  my_ip = var.my_ip
  env_prefix = var.env_prefix
  instance_type = var.instance_type
  public_key_location = var.public_key_location
  virtualization-type = var.virtualization-type
  architecture = var.architecture
  avail_zone = var.avail_zone
  subnet_id = module.myapp-subnet.subnet.id

}


//  resource "aws_security_group" "myapp-sg" {
//      name = "myapp-sg"
//      vpc_id = aws_vpc.myapp-vpc.id
//      ingress {
//      description      = "allow SSH traffic"
//      from_port        = 22
//      to_port          = 22
//      protocol         = "tcp"
//      cidr_blocks      = [var.my_ip]
//    }
//    ingress {
//      description      = "allow web traffic"
//     from_port        = 8080
//      to_port          = 8080
//      protocol         = "tcp"
//      cidr_blocks      = ["0.0.0.0/0"]
//    }
//    egress {
//      from_port        = 0
//      to_port          = 0
//      protocol         = "-1"
//      cidr_blocks      = ["0.0.0.0/0"]
//    }
//    tags = {
//      Name = "${var.env_prefix}-sg"
//    }
//  }
//  resource "aws_route_table_association" "a-rtb-subnet" {
//      subnet_id = aws_subnet.myapp-subnet-1.id
//      route_table_id = aws_route_table.myapp-aws-route-table.id
//  }
//  resource "aws_route_table" "myapp-aws-route-table" {
//      vpc_id = aws_vpc.myapp-vpc.id
//      route {
//          cidr_block = "0.0.0.0/0"
//          gateway_id = aws_internet_gateway.myapp-igw.id
//      }
//      tags = {
//          Name = "${var.env_prefix}-rtb"
//      }
//  }
